# gritulator

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: update_gh-pages.yml
docs/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  usage.html
docs/_modules/: index.html
docs/_sources/: sg_execution_times.rst  usage.rst
docs/auto_examples/: index.html  plot_RFPSC_grid_converter_12.5kVA_AC_grid_model.html  plot_grid_following_control_LCL_grid_converter_10kVA.html  plot_grid_following_control_grid_converter_10kVA.html  plot_grid_following_control_vdc_mode_grid_converter_10kVA.html  plot_power_synchronization_control_grid_converter_6.9kVA.html  plot_reference_feedforward_power_synchronization_control_grid_converter_6.9kVA.html  sg_execution_times.html
docs/control/: current_ctrl.html  design_notes.html  observers.html  speed_ctrl.html
docs/model/: DC_bus.html  converters.html  dc_bus.html  filter_and_grid.html  index.html  machines.html  mechanics.html  system.html
docs/source/: conf.py  (+2 more)
examples/: README.txt  plot_RFPSC_grid_converter_12.5kVA_AC_grid_model.py  plot_grid_following_control_LCL_grid_converter_10kVA.py  plot_grid_following_control_grid_converter_10kVA.py  plot_grid_following_control_vdc_mode_grid_converter_10kVA.py  plot_power_synchronization_control_grid_converter_6.9kVA.py  plot_reference_feedforward_power_synchronization_control_grid_converter_6.9kVA.py
gritulator/: __init__.py  _helpers.py  _plots.py
motulator/: __init__.py  _helpers.py  _plots.py
(+184 files in other folders)
